# ThumbnailGen

./: .gitignore  CMakeLists.txt  Dockerfile  Mission.txt  PROJECT_SUMMARY.md  README.md  WINDOWS_SETUP.md  build_local.bat  build_local.sh  cleanup.bat  cleanup.sh  docker-compose.yml  install_docker.bat  install_docker.sh  run_simple.bat  run_simple.sh  run_windows.bat  run_windows.ps1  run_with_monitoring.bat  run_with_monitoring.sh  run_with_monitoring_old.bat  start_monitoring.bat
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml  thumbnailgen.json
scripts/: benchmark.sh  post.lua  test_build.sh
src/: main.cpp  metrics.cpp  metrics.hpp  server.cpp  server.hpp  thumbnail_processor.cpp  thumbnail_processor.hpp
